--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.application.name=tutorials-app
 spring.datasource.username=testuser
 spring.datasource.password=testpassword
 spring.datasource.url=jdbc:postgresql://localhost:5432/tutorials_db
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
