--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
 spring.application.name=tutorials-app
 
+# Database configurations
 spring.datasource.username=testuser
 spring.datasource.password=testpassword
 spring.datasource.url=jdbc:postgresql://localhost:5432/tutorials_db
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+# Liquibase configurations
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+
+# JPA configurations
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
