Added new migrations and Redis dependency

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,9 @@ spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 
 # JPA configurations
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Redis configurations
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.username=redis-testusername
+spring.data.redis.password=redis-testpassword
