--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,19 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+  redis:
+    image: redis:7.0
+    container_name: redisdb
+    environment:
+      - REDIS_USERNAME=redis-testusername
+      - REDIS_PASSWORD=redis-testpassword
+    ports:
+      - "6379:6379"
+    command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}", "--masterauth", "${REDIS_PASSWORD}"]
+    volumes:
+      - redis-data:/data
 
 volumes:
   postgres_data:
+  redis-data:
+    driver: local
